--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta
       name="Twitter Chopper"
-      content="Chop your long posts into tweet-size pieces.a"
+      content="Chop your long posts into tweet-size pieces."
     />
     <title>Twitter Chopper</title>
+    <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
